--- a/index.html
+++ b/index.html
@@ -41,13 +41,17 @@ main{
     margin-top: 45px;
 }
 @media only screen and (max-width: 600px) {
+    body{
+        margin: 0;
+        padding: 0;
+    }
     main {
-    width: 400px;
+        width: 100%;
     margin: auto;
-    border: 1px solid rgb(255, 0, 179);
+    border: none;
     padding: 0;
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 50px
 }
     .allimages{
         display: grid;
